--- a/idex.html
+++ b/idex.html
@@ -4,9 +4,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <section class="top-banner">
+    <div class="half">
+    <h1>welcome to</h1>
+    <h1> <span class="orange">YAP!</span>  WORLD</h1>
+    <h3> dremer and challnge taker</h3>
+   
+        <p>Life is about accepting the challenges along the way, choosing to keep moving forward, and savoring the journey.”
+            ― Roy T. Bennett, The Light in the Heart</p>
+            
+            <a target="_blank" href="www.google.com"> CLICK ME</a>
+        </div>
+    <div class="half">
+                <img src="../download (2).png" alt="">
+            </div>
     
+   </section>
+
 </body>
 </html>
